# Lumen

./: .gitignore  .gitmodules  CMakeLists.txt  CommonTypesTests.cpp##afdbc7e77f562f9b773f4e2828e58444.gcov  Makefile  README.md  dependencies.txt
src/Export/: CMakeLists.txt  OutputFormatBmp.cpp  OutputFormatHdr.cpp  OutputFormatJpeg.cpp  OutputFormatPng.cpp  OutputFormatTga.cpp  RenderExporter.cpp
src/GPU/OpenGL/: CMakeLists.txt  CameraGL.cpp  EngineGL.cpp  FramebufferGL.cpp  MaterialGL.cpp  ObjectGL.cpp  ResourceManagerGL.cpp  ShadersGL.cpp  SkyboxGL.cpp  TextureGL.cpp  UniformBufferGL.cpp  WindowGL.cpp
src/GUI/: Application.cpp  CMakeLists.txt
src/GUI/Components/: CameraWidget.cpp  CameraWidget.hpp  CubeDialog.cpp  CubeDialog.hpp  ExportWidget.cpp  ExportWidget.hpp  LightWidget.cpp  LightWidget.hpp  MainWindow.cpp  MainWindow.hpp  MaterialsWidget.cpp  MaterialsWidget.hpp  ObjectWidget.cpp  ObjectWidget.hpp  (+16 more)
src/Geometry/: CMakeLists.txt  CubeMeshBuilder.cpp  Mesh.cpp  OBJLoader.cpp  PlaneMeshBuilder.cpp  SphereMeshBuilder.cpp
src/Qt/: Application.cpp  CMakeLists.txt  MainWindow.cpp  MaterialSelectorWidget.cpp  TexturePreviewWidget.cpp  TextureSelectorWidget.cpp
src/Rendering/: CMakeLists.txt  CameraRayEmitter.cpp  MultiThreadedCPU.cpp  MultiThreadedCPUStrategy.cpp  RayIntersection.cpp  RenderSettings.cpp  RenderTime.cpp  Renderer.cpp  SingleThreaded.cpp  SingleThreadedStrategy.cpp
src/Surface/: CMakeLists.txt  Material.cpp  MaterialManager.cpp  Texture.cpp  TextureFiltering.cpp  TextureLoader.cpp  TextureManager.cpp  TextureWrapping.cpp
tests/: CMakeLists.txt  coverage_report.json  generate_coverage_table.py  tests.cpp
tests/BVH/: BVHBuilderTests.cpp  BVHNodeTests.cpp
tests/Core/: CameraTests.cpp  ColorTests.cpp  ColorUtilsTests.cpp  CommonTypesTests.cpp  FramebufferTests.cpp  ImageTypesTests.cpp  MeshTests.cpp  Object3DTests.cpp  ObserverTests.cpp  RandomTests.cpp  RayIntersectionTests.cpp  RayTests.cpp  SceneTests.cpp  ScopedTimerTests.cpp  TransformTests.cpp
tests/Export/: OutputFormatBmpTests.cpp  OutputFormatHdrTests.cpp  OutputFormatJpegTests.cpp  OutputFormatPngTests.cpp  OutputFormatTests.cpp  OutputFormatTgaTests.cpp  RenderExporterTests.cpp
tests/GPU/: IEngineGPUTests.cpp  IObjectGPUTests.cpp  IResourceManagerGPUTests.cpp  ITextureGPUTests.cpp
tests/Geometry/: CubeMeshBuilderTests.cpp  MeshTests.cpp  OBJLoaderTests.cpp  PlaneMeshBuilderTests.cpp  SphereMeshBuilderTests.cpp
tests/ImplementationParameters/: ParameterTypesTests.cpp  ParametersTests.cpp
tests/Lighting/: DirectionalLightTests.cpp  LightTests.cpp  PointLightTests.cpp  SpotLightTests.cpp
tests/PostProcessing/: AcesTests.cpp  ExposureTests.cpp  LuminanceReinhardTests.cpp  NoneTests.cpp  ReinhardTests.cpp  ToneMappingTests.cpp  Uncharted2Tests.cpp  WhiteReinhardTests.cpp
tests/Rendering/: CameraRayEmitterTests.cpp  RayIntersectionTests.cpp  RenderSettingsTests.cpp  RendererTests.cpp
tests/Scene/: CameraTests.cpp  LightSampleTests.cpp  Object3DTests.cpp  SceneTests.cpp  SkyboxTests.cpp
tests/SceneObjects/: CameraTests.cpp  Object3DTests.cpp
tests/Surface/: MaterialManagerTests.cpp  MaterialTests.cpp  TextureFilteringTests.cpp  TextureLoaderTests.cpp  TextureManagerTests.cpp  TextureTests.cpp  TextureWrappingTests.cpp
tests/coverage_report/: coverage_report.BVHBuilder.cpp.c411baf86b491ec0b084dc5363e5d1f2.html  coverage_report.BVHNode.cpp.1c233635f1312a15330f75a85b1b8439.html  coverage_report.BVHNode.hpp.f335d5d9c31cd5165bc7a97ef52a7b53.html  coverage_report.Camera.cpp.30bb391855898a193497d7a83c34babd.html  coverage_report.Camera.cpp.52e47a9fdfa01692ebeed9f4d0d091f5.html  coverage_report.Camera.cpp.727ed78ab5e1b3dc194a290ac242a348.html  coverage_report.Camera.hpp.3fd35ceb2671afae24c279d77471ad7e.html  coverage_report.Camera.hpp.64f9d6e3415beaa620a5fdb9753dd76f.html  coverage_report.Camera.hpp.d1c8e433595c4c8caee892cf9baed3db.html  coverage_report.CameraRayEmitter.cpp.67c8f4437f6a8e833110f41ca455f752.html  coverage_report.CameraRayEmitter.hpp.db33e59bb4e9afaa7a28167a1047bbdc.html  coverage_report.ColorUtils.hpp.16f5f5bcc50608bfd774bc9653759f6f.html  coverage_report.CommonTypes.cpp.68c39157ab6b705375fccac0082db3bb.html  coverage_report.CommonTypes.hpp.4944e1c2f0708288966bc9de8f44f130.html  coverage_report.CubeMeshBuilder.cpp.72b94ad46819c968f46a674c618749e4.html  coverage_report.DirectionalLight.cpp.9614b148e6305f15b426d1e42b1cf1df.html  coverage_report.DirectionalLight.hpp.a5c429c313a4c04fae557f71d45332ab.html  coverage_report.Exposure.hpp.ed8c9bf42c2f6bac50b4db78d9db7fd5.html  coverage_report.Framebuffer.cpp.bd2bac98115c6c259b423fa29892d0a1.html  coverage_report.Framebuffer.hpp.a4fda17c756d5483b9ef448ca786f357.html  coverage_report.IRenderer.cpp.ccbbb0b7e7cc528b918633a15346c0ff.html  coverage_report.IRenderer.hpp.a6f6f33c310c09aa65b10cfbd95d60b4.html  coverage_report.ImageProperties.hpp.2e8cf9ae40b9e6cf13264d992d8c8503.html  coverage_report.Light.hpp.539e9928c51814fae8967ea8b548bd0c.html  coverage_report.LightCalculator.cpp.120ed3292acd7e2652f8dbb460880d07.html  coverage_report.LightCalculator.hpp.69afdc611baec35328c965c6499ea289.html  coverage_report.Mat3.hpp.b3e3d4afd71bbd3ae2ee4cf3260e7a81.html  coverage_report.Mat4.hpp.bfcfe33fc32220171da4f7f6475d3280.html  coverage_report.Material.cpp.0d105b48d5855bc43325a6c51ff654ab.html  coverage_report.Material.hpp.1bbeecc9ef0fd8e101de946001860745.html  coverage_report.Mesh.cpp.42a4a5fbd0d7d6919cc792538725022b.html  coverage_report.Mesh.cpp.b374c72a811d3dc502d70caa6ac36994.html  coverage_report.Mesh.hpp.48e2a65d6f62c842484fabf5c0c4601d.html  coverage_report.Mesh.hpp.93d17f4ec060245869383254ec15d971.html  coverage_report.MeshBuilder.hpp.47e80affe75328d22808a673a11bc5a8.html  coverage_report.MultiThreadedCPU.cpp.4654f1103d1e5a7d43c87efeb427e753.html  coverage_report.MultiThreadedCPUStrategy.cpp.d4cd4c43384fd6d058d2e092cb026eaf.html  coverage_report.None.hpp.13e43767c6245df7698fbbe55c9fbe4b.html  coverage_report.OBJLoader.cpp.d07066d389f44384085c226380c27408.html  coverage_report.Object3D.cpp.100675ed066c505b9a079b8642b85f89.html  (+61 more)
(+1376 files in other folders)
